Upgrade e2b_code_interpreter to 0.0.11b36 in Jupyter notebooks

--- a/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
+++ b/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
@@ -72,7 +72,7 @@
         }
       ],
       "source": [
-        "%pip install mistralai e2b_code_interpreter"
+        "%pip install mistralai e2b_code_interpreter==0.0.11b36"
       ]
     },
     {
