--- a/examples/langgraph-python/langgraph_code_interpreter.ipynb
+++ b/examples/langgraph-python/langgraph_code_interpreter.ipynb
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "%pip install langgraph e2b-code-interpreter langchain langchainhub langchain-openai"
+    "%pip install langgraph e2b_code_interpreter==0.0.11b36 langchain langchainhub langchain-openai"
    ]
   },
   {
