--- a/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_groq.ipynb
+++ b/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_groq.ipynb
@@ -94,7 +94,7 @@
         }
       ],
       "source": [
-        "%pip install groq e2b_code_interpreter"
+        "%pip install groq e2b_code_interpreter==0.0.11b36"
       ]
     },
     {
