--- a/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -261,13 +261,10 @@
     "\n",
     "    try:\n",
     "        with open(dataset_path, \"rb\") as f:\n",
-    "            remote_path = code_interpreter.files.write(f)\n",
+    "            code_interpreter.files.write(dataset_path, f)\n",
     "\n",
-    "        if not remote_path:\n",
-    "            raise ValueError(\"Failed to upload dataset\")\n",
-    "\n",
-    "        print(\"Uploaded at\", remote_path)\n",
-    "        return remote_path\n",
+    "        print(\"Uploaded at\", dataset_path)\n",
+    "        return dataset_path\n",
     "    except Exception as error:\n",
     "        print(\"Error during file upload:\", error)\n",
     "        raise error"
