--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -269,9 +269,10 @@
       "source": [
         "def upload_dataset(code_interpreter):\n",
         "  print(\"Uploading dataset to Code Interpreter sandbox...\")\n",
-        "  with open(\"./city_temperature.csv\", \"rb\") as f:\n",
-        "    remote_path = code_interpreter.files.write(f)\n",
-        "  print(\"Uploaded at\", remote_path)"
+        "  file_path = \"./city_temperature.csv\"\n",
+        "  with open(file_path, \"rb\") as f:\n",
+        "    code_interpreter.files.write(file_path, f)\n",
+        "  print(\"Uploaded at\", file_path)"
       ]
     },
     {
