Fix GPT-4o tool call parsing

--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -150,6 +150,7 @@
       "outputs": [],
       "source": [
         "from openai import OpenAI\n",
+        "import json\n",
         "\n",
         "client = OpenAI(api_key=OPENAI_API_KEY)\n",
         "\n",
@@ -196,14 +197,15 @@
         "    if choice.message.tool_calls and len(choice.message.tool_calls) > 0:\n",
         "      for tool_call in choice.message.tool_calls:\n",
         "        if tool_call.function.name == \"execute_python\":\n",
-        "          if \"code\" in tool_call.function.arguments:\n",
+        "          if isinstance(tool_call.function.arguments, dict) and \"code\" in tool_call.function.arguments:\n",
         "            code = tool_call.function.arguments[\"code\"]\n",
         "          else:\n",
-        "            code = tool_call.function.arguments\n",
-        "          print(\"CODE TO RUN\")\n",
-        "          print(code)\n",
-        "          code_interpreter_results = code_interpret(e2b_code_interpreter, code)\n",
-        "          return code_interpreter_results\n",
+        "            code = json.loads(tool_call.function.arguments)[\"code\"]\n",
+        "\n",
+        "            print(\"CODE TO RUN\")\n",
+        "            print(code)\n",
+        "            code_interpreter_results = code_interpret(e2b_code_interpreter, code)\n",
+        "            return code_interpreter_results\n",
         "    else:\n",
         "      print(\"Answer:\", choice.message.content)\n",
         "\n"
