Improve prompt for consistency

--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -349,7 +349,7 @@
         "image = plot1.png\n",
         "code_interpreter_results = chat(\n",
         "  code_interpreter,\n",
-        "  \"Based on what you see, what's name of this distribution? Show me the distribution function\",\n",
+        "  \"Based on what you see, what's name of this distribution? Make a plot of the distribution function\",\n",
         "  image,\n",
         ")\n",
         "\n",
