--- a/examples/llama-3-code-interpreter-python/llama_3_code_interpreter.ipynb
+++ b/examples/llama-3-code-interpreter-python/llama_3_code_interpreter.ipynb
@@ -182,13 +182,9 @@
       "source": [
         "def code_interpret(e2b_code_interpreter, code):\n",
         "  print(\"Running code interpreter...\")\n",
-        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
-        "    code,\n",
-        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
-        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
-        "    # You can also stream code execution results\n",
-        "    # on_result=...\n",
-        "  )\n",
+        "  exec = e2b_code_interpreter.run_code(code,\n",
+        "  on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "  on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout))\n",
         "\n",
         "  if exec.error:\n",
         "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
@@ -307,9 +303,9 @@
         }
       ],
       "source": [
-        "from e2b_code_interpreter import CodeInterpreter\n",
+        "from e2b_code_interpreter import Sandbox\n",
         "\n",
-        "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+        "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
         "  code_results = chat_with_llama(\n",
         "    code_interpreter,\n",
         "    \"Visualize a distribution of height of men based on the latest data you know\"\n",
