--- a/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_togetherai.ipynb
+++ b/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_togetherai.ipynb
@@ -111,13 +111,9 @@
       "source": [
         "def code_interpret(e2b_code_interpreter, code):\n",
         "  print(\"Running code interpreter...\")\n",
-        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
-        "    code,\n",
-        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
-        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
-        "    # You can also stream code execution results\n",
-        "    # on_result=...\n",
-        "  )\n",
+        "  exec = e2b_code_interpreter.run_code(code,\n",
+        "  on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "  on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout))\n",
         "\n",
         "  if exec.error:\n",
         "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
@@ -278,9 +274,9 @@
         }
       ],
       "source": [
-        "from e2b_code_interpreter import CodeInterpreter\n",
+        "from e2b_code_interpreter import Sandbox\n",
         "\n",
-        "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+        "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
         "  all_code_blocks_results = chat_with_llama(\n",
         "    code_interpreter,\n",
         "    \"Calculate value of pi using monte carlo method. Use 1000 iterations. Visualize all points of all iterations on a single plot, a point inside the unit circle should be green, other points should be gray.\",\n",
