--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -127,13 +127,9 @@
       "source": [
         "def code_interpret(e2b_code_interpreter, code):\n",
         "  print(\"Running code interpreter...\")\n",
-        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
-        "    code,\n",
-        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
-        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
-        "    # You can also stream code execution results\n",
-        "    # on_result=...\n",
-        "  )\n",
+        "  exec = e2b_code_interpreter.run_code(code,\n",
+        "  on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "  on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout))\n",
         "\n",
         "  if exec.error:\n",
         "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
@@ -272,8 +268,8 @@
         }
       ],
       "source": [
-        "from e2b_code_interpreter import CodeInterpreter\n",
-        "code_interpreter = CodeInterpreter(api_key=E2B_API_KEY)\n",
+        "from e2b_code_interpreter import Sandbox\n",
+        "code_interpreter = Sandbox(api_key=E2B_API_KEY)\n",
         "\n",
         "# 1. Ask GPT-4o to generate chart\n",
         "code_interpreter_results = chat(\n",
