--- a/examples/langchain-python/langchain_code_interpreter.ipynb
+++ b/examples/langchain-python/langchain_code_interpreter.ipynb
@@ -136,7 +136,7 @@
     "from typing import Any, List\n",
     "from langchain_core.tools import Tool\n",
     "from pydantic.v1 import BaseModel, Field\n",
-    "from e2b_code_interpreter import CodeInterpreter\n",
+    "from e2b_code_interpreter import Sandbox\n",
     "from langchain_core.messages import BaseMessage, ToolMessage\n",
     "from langchain.agents.output_parsers.tools import (\n",
     "    ToolAgentAction,\n",
@@ -162,12 +162,12 @@
     "            raise Exception(\n",
     "                \"Code Interpreter tool called while E2B_API_KEY environment variable is not set. Please get your E2B api key here https://e2b.dev/docs and set the E2B_API_KEY environment variable.\"\n",
     "            )\n",
-    "        self.code_interpreter = CodeInterpreter()\n",
+    "        self.code_interpreter = Sandbox()\n",
     "\n",
     "    def call(self, parameters: dict, **kwargs: Any):\n",
     "        code = parameters.get(\"code\", \"\")\n",
     "        print(f\"***Code Interpreting...\\n{code}\\n====\")\n",
-    "        execution = self.code_interpreter.notebook.exec_cell(code)\n",
+    "        execution = self.code_interpreter.run_code(code)\n",
     "        return {\n",
     "            \"results\": execution.results,\n",
     "            \"stdout\": execution.logs.stdout,\n",
