--- a/examples/o1-code-interpreter-python/o1.ipynb
+++ b/examples/o1-code-interpreter-python/o1.ipynb
@@ -216,11 +216,9 @@
       "source": [
         "def code_interpret(e2b_code_interpreter, code):\n",
         "  print(\"Running code interpreter...\")\n",
-        "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
-        "    code,\n",
-        "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
-        "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
-        "  )\n",
+        "  exec = e2b_code_interpreter.run_code(code,\n",
+        "  on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+        "  on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout))\n",
         "\n",
         "  if exec.error:\n",
         "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
@@ -402,9 +400,9 @@
         }
       ],
       "source": [
-        "from e2b_code_interpreter import CodeInterpreter\n",
+        "from e2b_code_interpreter import Sandbox\n",
         "\n",
-        "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+        "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
         "  # Upload the dataset to the code interpreter sandbox\n",
         "  upload_dataset(code_interpreter)\n",
         "\n",
