--- a/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -85,7 +85,7 @@
     "import json\n",
     "import re\n",
     "from together import Together\n",
-    "from e2b_code_interpreter import CodeInterpreter\n",
+    "from e2b_code_interpreter import Sandbox\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -185,13 +185,9 @@
    "source": [
     "def code_interpret(e2b_code_interpreter, code):\n",
     "    print(\"Running code interpreter...\")\n",
-    "    exec = e2b_code_interpreter.notebook.exec_cell(\n",
-    "        code,\n",
-    "        on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
-    "        on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
-    "        # You can also stream code execution results\n",
-    "        # on_result=...\n",
-    "    )\n",
+    "    exec = e2b_code_interpreter.run_code(code,\n",
+    "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+    "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout))\n",
     "\n",
     "    if exec.error:\n",
     "        print(\"[Code Interpreter ERROR]\", exec.error)\n",
@@ -343,7 +339,7 @@
     }
    ],
    "source": [
-    "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+    "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
     "    # Upload the dataset to the code interpreter sandbox\n",
     "    upload_dataset(code_interpreter)\n",
     "\n",
