--- a/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
+++ b/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
@@ -72,7 +72,7 @@
         }
       ],
       "source": [
-        "%pip install mistralai==0.4.2 e2b_code_interpreter==0.0.11b36"
+        "%pip install mistralai==0.4.2 e2b_code_interpreter==1.0.0"
       ]
     },
     {
