--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "%pip install --upgrade fireworks-ai openai e2b_code_interpreter==0.0.11b36"
+    "%pip install --upgrade fireworks-ai openai e2b_code_interpreter==1.0.0"
    ]
   },
   {
