--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -60,7 +60,7 @@
         }
       ],
       "source": [
-        "%pip install openai e2b_code_interpreter==0.0.11b36"
+        "%pip install openai e2b_code_interpreter==1.0.0"
       ]
     },
     {
