--- a/examples/langchain-python/langchain_code_interpreter.ipynb
+++ b/examples/langchain-python/langchain_code_interpreter.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "%pip install e2b_code_interpreter==0.0.11b36 langchain langchainhub langchain-openai"
+    "%pip install e2b_code_interpreter==1.0.0 langchain langchainhub langchain-openai"
    ]
   },
   {
