--- a/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_togetherai.ipynb
+++ b/examples/llama-3-code-interpreter-python/llama_3_code_interpreter_togetherai.ipynb
@@ -68,7 +68,7 @@
         }
       ],
       "source": [
-        "%pip install together e2b_code_interpreter==0.0.11b36"
+        "%pip install together e2b_code_interpreter==1.0.0"
       ]
     },
     {
