--- a/examples/o1-code-interpreter-python/o1.ipynb
+++ b/examples/o1-code-interpreter-python/o1.ipynb
@@ -61,7 +61,7 @@
         }
       ],
       "source": [
-        "%pip install openai e2b_code_interpreter==0.0.11b36 python-dotenv"
+        "%pip install openai e2b_code_interpreter==1.0.0 python-dotenv"
       ]
     },
     {
