--- a/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
+++ b/examples/together-ai-with-code-interpreting/together-ai-code-interpreter-python/together_with_e2b_code_interpreter.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "%pip install together==1.3.1 e2b_code_interpreter==0.0.11b36 python-dotenv==1.0.0"
+    "%pip install together==1.3.1 e2b_code_interpreter==1.0.0 python-dotenv==1.0.0"
    ]
   },
   {
