--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -76,7 +76,7 @@
         }
       ],
       "source": [
-        "%pip install groq e2b_code_interpreter==0.0.11b36"
+        "%pip install groq e2b_code_interpreter==1.0.0"
       ]
     },
     {
