--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -67,9 +67,7 @@
      ]
     }
    ],
-   "source": [
-    "%pip install --upgrade fireworks-ai openai e2b_code_interpreter==1.0.0"
-   ]
+   "source": "%pip install --upgrade fireworks-ai openai e2b_code_interpreter==1.0.0 python-dotenv==1.0.1"
   },
   {
    "cell_type": "markdown",
@@ -171,11 +169,9 @@
    "source": [
     "### 4. Defining the function for running the AI-generated code\n",
     "\n",
-    "We define the `code_interpret` function that uses the [E2B Code Interpreter SDK](https://e2b.dev/docs/code-interpreter/installation) to run AI-generated Python code.\n",
+    "We define the `code_interpret` function that uses the [E2B Code Interpreter SDK](https://e2b.dev/docs/quickstart) to run AI-generated Python code.\n",
     "\n",
-    "We will use `exec_cell` to execute the AI-generated code inside the code interpreter sandbox.\n",
-    "\n",
-    "Learn more about the `exec_cell` method [here](https://e2b.dev/docs/code-interpreter/execution)."
+    "We will use `run_code` to execute the AI-generated code inside the code interpreter sandbox. "
    ]
   },
   {
@@ -186,7 +182,7 @@
    "source": [
     "def code_interpret(e2b_code_interpreter, code):\n",
     "  print(\"Running code interpreter...\")\n",
-    "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
+    "  exec = e2b_code_interpreter.run_code(\n",
     "    code,\n",
     "    # Stream stdout and stderr from the Code Interpreter\n",
     "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
@@ -305,9 +301,9 @@
     }
    ],
    "source": [
-    "from e2b_code_interpreter import CodeInterpreter\n",
+    "from e2b_code_interpreter import Sandbox\n",
     "\n",
-    "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+    "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
     "  execution_output = chat(\n",
     "    code_interpreter,\n",
     "    USER_PROMPT,\n",
