Add Qwen with Fireworks

--- a/examples/fireworks-code-interpreter-python/qwen_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/qwen_code_interpreter.ipynb
@@ -315,29 +315,31 @@
     "from e2b_code_interpreter import Sandbox\n",
     "\n",
     "with Sandbox(api_key=E2B_API_KEY) as code_interpreter:\n",
-    "  execution_output = chat(\n",
+    "  all_code_blocks_results = chat(\n",
     "    code_interpreter,\n",
+    "    #\"Calculate value of pi using monte carlo method. Use 1000 iterations. Visualize all points of all iterations on a single plot, a point inside the unit circle should be green, other points should be gray.\",\n",
     "    \"Plot a 3D chart of sin x cos y please.\",\n",
     "  )\n",
     "\n",
-    "  if execution_output == None:\n",
+    "  if all_code_blocks_results is None:\n",
     "    print(\"No output from the code interpreter. Did the LLM generate any code?\")\n",
     "    sys.exit(1)\n",
     "\n",
-    "  # Access stdout\n",
-    "  print(\"Stdout:\", execution_output.logs.stdout)\n",
-    "  # Access stderr\n",
-    "  print(\"Stderr:\", execution_output.logs.stderr)\n",
+    "  for result in all_code_blocks_results:\n",
+    "    # Access stdout\n",
+    "    print(\"Stdout:\", result.logs.stdout)\n",
+    "    # Access stderr\n",
+    "    print(\"Stderr:\", result.logs.stderr)\n",
     "\n",
-    "  # Access any runtime errors\n",
-    "  print(\"AI-generated Python runtime error:\", execution_output.error)\n",
+    "    # Access any runtime errors\n",
+    "    print(\"AI-generated Python runtime error:\", result.error)\n",
     "\n",
-    "  # Access any results of code execution - charts, interpreter last line, images, etc.\n",
-    "  print(\"Results:\", execution_output.results)\n",
-    "  if len(execution_output.results) == 0:\n",
-    "    sys.exit(0)\n",
+    "    # Access any results of code execution - charts, interpreter last line, images, etc.\n",
+    "    print(\"Results:\", result.results)\n",
+    "    if len(result.results) == 0:\n",
+    "      sys.exit(0)\n",
     "\n",
-    "execution_output.results[0]"
+    "result.results[0]"
    ]
   }
  ],
