Add debugging for gemini example

--- a/examples/gemini-code-interpreter-python/main.ipynb
+++ b/examples/gemini-code-interpreter-python/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def code_interpret(e2b_code_interpreter, code):\n",
     "    try:\n",
     "        print(\"Running code interpreter...\")\n",
-    "        # Clean up the code - remove any markdown code block syntax\n",
     "        clean_code = code.replace('```python', '').replace('```', '').strip()\n",
     "        \n",
     "        exec = e2b_code_interpreter.run_code(\n",
@@ -229,8 +228,7 @@
     "\n",
     "Return only the Python code, no explanations.\"\"\"\n",
     "\n",
-    "        # Remove the timeout parameter\n",
-    "        response = model.generate_content(prompt)  # Remove timeout parameter\n",
+    "        response = model.generate_content(prompt)\n",
     "\n",
     "        if response.text:\n",
     "            code = response.text.strip()\n",
@@ -255,35 +253,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sandbox initialized\n",
       "\n",
       "==================================================\n",
       "User Message: Create a simple scatter plot with 10 random points\n",
       "==================================================\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
-     ]
     }
    ],
    "source": [
     "try:\n",
-    "    # Initialize with explicit API key\n",
-    "    code_interpreter = Sandbox(api_key=E2B_API_KEY)  # Use userdata.get instead of string literal\n",
-    "\n",
-    "\n",
-    "    # Generate plot\n",
+    "    code_interpreter = Sandbox(api_key=E2B_API_KEY)\n",
+    "    print(\"Sandbox initialized\") # Added for debugging - TBD remove\n",
     "    results = chat(\n",
     "        code_interpreter,\n",
-    "        \"Create a simple scatter plot with 10 random points\"  # Simpler task to test\n",
+    "        \"Create a simple scatter plot with 10 random points\"\n",
     "    )\n",
+    "    print(f\"Results received: {results}\") # Added for debugging - TBD remove\n",
     "\n",
     "    if results:\n",
+    "        print(f\"Result type: {type(results[0])}\") # Added for debugging - TBD remove\n",
     "        plot1 = results[0]\n",
+    "        print(\"Plot data extracted\") # Added for debugging - TBD remove\n",
+    "        display_plot(plot1)\n",
     "        print(\"Plot generated successfully\")\n",
     "    else:\n",
     "        print(\"Failed to generate plot\")\n",
