Add debugging to gemini code interpreter

--- a/examples/gemini-code-interpreter-python/main.ipynb
+++ b/examples/gemini-code-interpreter-python/main.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: google-generativeai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.6.0)\n",
-      "Requirement already satisfied: google-ai-generativelanguage==0.6.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (0.6.4)\n",
+      "Requirement already satisfied: google-generativeai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.8.3)\n",
+      "Requirement already satisfied: google-ai-generativelanguage==0.6.10 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (0.6.10)\n",
       "Requirement already satisfied: google-api-core in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.19.0)\n",
       "Requirement already satisfied: google-api-python-client in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.128.0)\n",
       "Requirement already satisfied: google-auth>=2.15.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.29.0)\n",
@@ -18,7 +18,7 @@
       "Requirement already satisfied: pydantic in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.9.1)\n",
       "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (4.66.2)\n",
       "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (4.12.2)\n",
-      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-ai-generativelanguage==0.6.4->google-generativeai) (1.23.0)\n",
+      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-ai-generativelanguage==0.6.10->google-generativeai) (1.23.0)\n",
       "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google-generativeai) (1.63.0)\n",
       "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google-generativeai) (2.31.0)\n",
       "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth>=2.15.0->google-generativeai) (5.3.1)\n",
@@ -29,8 +29,8 @@
       "Requirement already satisfied: uritemplate<5,>=3.0.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-python-client->google-generativeai) (4.1.1)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pydantic->google-generativeai) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.23.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pydantic->google-generativeai) (2.23.3)\n",
-      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.4->google-generativeai) (1.63.0)\n",
-      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.4->google-generativeai) (1.62.2)\n",
+      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.63.0)\n",
+      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.62.2)\n",
       "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from httplib2<1.dev0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.1)\n",
       "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.5.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
@@ -59,26 +59,13 @@
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install google-generativeai\n",
-    "%pip install e2b_code_interpreter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: google-generativeai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.6.0)\n",
-      "Requirement already satisfied: google-ai-generativelanguage==0.6.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (0.6.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: google-generativeai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.8.3)\n",
+      "Requirement already satisfied: google-ai-generativelanguage==0.6.10 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (0.6.10)\n",
       "Requirement already satisfied: google-api-core in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.19.0)\n",
       "Requirement already satisfied: google-api-python-client in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.128.0)\n",
       "Requirement already satisfied: google-auth>=2.15.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.29.0)\n",
@@ -86,7 +73,7 @@
       "Requirement already satisfied: pydantic in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (2.9.1)\n",
       "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (4.66.2)\n",
       "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-generativeai) (4.12.2)\n",
-      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-ai-generativelanguage==0.6.4->google-generativeai) (1.23.0)\n",
+      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-ai-generativelanguage==0.6.10->google-generativeai) (1.23.0)\n",
       "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google-generativeai) (1.63.0)\n",
       "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google-generativeai) (2.31.0)\n",
       "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth>=2.15.0->google-generativeai) (5.3.1)\n",
@@ -97,8 +84,8 @@
       "Requirement already satisfied: uritemplate<5,>=3.0.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-python-client->google-generativeai) (4.1.1)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pydantic->google-generativeai) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.23.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pydantic->google-generativeai) (2.23.3)\n",
-      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.4->google-generativeai) (1.63.0)\n",
-      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.4->google-generativeai) (1.62.2)\n",
+      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.63.0)\n",
+      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.62.2)\n",
       "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from httplib2<1.dev0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.1)\n",
       "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.5.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
@@ -113,9 +100,31 @@
     }
    ],
    "source": [
-    "#%pip install google-colab\n",
     "%pip install google-generativeai\n",
-    "\n",
+    "%pip install e2b_code_interpreter\n",
+    "%pip install -q -U google-generativeai\n",
+    "#%pip install google-colab\n",
+    "%pip install google-generativeai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "configure() got an unexpected keyword argument 'GOOGLE_API_KEY'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# TODO: Get your Google API key\u001b[39;00m\n\u001b[1;32m     10\u001b[0m GOOGLE_API_KEY \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGOOGLE_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m \u001b[43mgenai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfigure\u001b[49m\u001b[43m(\u001b[49m\u001b[43mGOOGLE_API_KEY\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGOOGLE_API_KEY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# TODO: Get your E2B API key from https://e2b.dev/docs\u001b[39;00m\n\u001b[1;32m     14\u001b[0m E2B_API_KEY \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE2B_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: configure() got an unexpected keyword argument 'GOOGLE_API_KEY'"
+     ]
+    }
+   ],
+   "source": [
     "import google.generativeai as genai\n",
     "\n",
     "model = genai.GenerativeModel('gemini-pro')\n",
@@ -126,6 +135,7 @@
     "\n",
     "# TODO: Get your Google API key\n",
     "GOOGLE_API_KEY = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "genai.configure(GOOGLE_API_KEY=os.getenv(\"GOOGLE_API_KEY\"))\n",
     "\n",
     "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
     "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")"
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +209,7 @@
     "\n",
     "def chat(e2b_code_interpreter, user_message):\n",
     "    try:\n",
+    "        print(\"Starting chat function...\")  # Debug 1\n",
     "        print(f\"\\n{'='*50}\\nUser Message: {user_message}\\n{'='*50}\")\n",
     "\n",
     "        prompt = f\"\"\"You are a python data scientist. Write simple, working code for this task.\n",
@@ -228,13 +239,17 @@
     "\n",
     "Return only the Python code, no explanations.\"\"\"\n",
     "\n",
+    "        print(\"Sending request to Gemini...\")  # Added for debugging - TBD remove\n",
     "        response = model.generate_content(prompt)\n",
+    "        print(\"Received response from Gemini\")  # Added for debugging - TBD remove\n",
+    "        print(\"Response text:\", response.text)  # Added for debugging - TBD remove\n",
     "\n",
     "        if response.text:\n",
     "            code = response.text.strip()\n",
     "            if code:\n",
     "                print(\"CODE TO RUN\")\n",
     "                print(code)\n",
+    "                print(\"Running code interpreter...\")  # Debug 5\n",
     "                return code_interpret(e2b_code_interpreter, code)\n",
     "\n",
     "        print(\"No response generated\")\n",
@@ -254,10 +269,25 @@
      "output_type": "stream",
      "text": [
       "Sandbox initialized\n",
+      "Starting chat function...\n",
       "\n",
       "==================================================\n",
       "User Message: Create a simple scatter plot with 10 random points\n",
-      "==================================================\n"
+      "==================================================\n",
+      "Sending request to Gemini...\n",
+      "Error in chat function: 403 Request had insufficient authentication scopes. [reason: \"ACCESS_TOKEN_SCOPE_INSUFFICIENT\"\n",
+      "domain: \"googleapis.com\"\n",
+      "metadata {\n",
+      "  key: \"service\"\n",
+      "  value: \"generativelanguage.googleapis.com\"\n",
+      "}\n",
+      "metadata {\n",
+      "  key: \"method\"\n",
+      "  value: \"google.ai.generativelanguage.v1beta.GenerativeService.GenerateContent\"\n",
+      "}\n",
+      "]\n",
+      "Results received: None\n",
+      "Failed to generate plot\n"
      ]
     }
    ],
