Update wording in o1 example

--- a/examples/o1-python/o1.ipynb
+++ b/examples/o1-python/o1.ipynb
@@ -5,7 +5,7 @@
       "metadata": {},
       "source": [
         "# Code Interpreting with o1 by OpenAI\n",
-        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for o1. We ask o1 to show a chart which means o1 will generate Python code that will get sent to E2B, we display the chart and then ask GPT-4o to reason about the generated chart and create a new chart."
+        "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for o1. "
       ]
     },
     {
